--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,12 @@
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 m-2">
             <nav class="navbar navbar-expand-lg border-bottom border-light">
                 <a class="navbar-brand ps-3" href="#">VisionVault</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -60,29 +60,42 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-8 btn-primary">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="col-lg-7 bg-primary">
+            <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/boy.png" class="d-block w-50" alt="...">
+                        <img src="/boy.png" class="d-block" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/boy.png" class="d-block w-50" alt="...">
+                        <img src="/boy.png" class="d-block" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/boy.png" class="d-block w-50" alt="...">
+                        <img src="/boy.png" class="d-block" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
                     data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+                    <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span> -->
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying #carouselExampleCaptions"
                     data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
+                    <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span> -->
                 </button>
+            </div>
+        </div>
+        <div class="col-lg-5">
+            <div class="row">
+                <img src="/boy.png" class="d-block w-50" alt="...">
+            </div>
+            <div class="row">
+                <img src="/boy.png" class="d-block w-50" alt="...">
             </div>
         </div>
     </div>
@@ -109,13 +122,13 @@
             </div>
         </div>
         <div class="card">
-            <img src="boy.png" class="card-img-top" alt="...">
+            <img src="/boy.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
             </div>
         </div>
         <div class="card">
-            <img src="boy.png" class="card-img-top" alt="...">
+            <img src="/boy.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
             </div>
