Navbar Template Added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,60 +13,18 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-lg-12 m-2">
-            <nav class="navbar navbar-expand-lg border-bottom border-light">
-                <a class="navbar-brand ps-3" href="#">VisionVault</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="navbarOffcanvasLg"
-                    aria-labelledby="navbarOffcanvasLgLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">VisionVault</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-5">
-                            <li class="nav-item pe-3">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item pe-3">
-                                <a class="nav-link active" aria-current="page" href="#">About Us</a>
-                            </li>
-                            <li class="nav-item pe-3">
-                                <a class="nav-link active" aria-current="page" href="#">Contact</a>
-                            </li>
-                            <li class="nav-item dropdown pe-3">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    Explore
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </div>
+    <%- include('navbar')%>
     <div class="row">
         <div class="col-lg-7 bg-primary">
             <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  </div>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="/boy.png" class="d-block" alt="...">
@@ -83,8 +41,8 @@
                     <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span> -->
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying #carouselExampleCaptions"
-                    data-bs-slide="next">
+                <button class="carousel-control-next" type="button"
+                    data-bs-target="#carouselExampleAutoplaying #carouselExampleCaptions" data-bs-slide="next">
                     <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span> -->
                 </button>
