--- a/public/index.css
+++ b/public/index.css
@@ -10,6 +10,23 @@
 }
 .nav-item{
     font-weight: 600;
+    transition: hover 2s;
+}
+.nav-item:hover{
+    border-bottom: 2px solid black;
+}
+.search-bar{
+    border-radius: 25px;
+    height: 3rem;
+}
+.search-bar::placeholder{
+    font-weight: 500;
+    font-size: 1.2rem;
+    padding-left: 2rem;
+}
+.search-icon{
+    position: relative;
+    left: 2rem;
 }
 .carousel-indicators{
     width: fit-content;
@@ -18,6 +35,6 @@
     left: -3rem;
 }
 .carousel-item img{
-    width: 50%;
-    height: 50%;
+    width: 450px;
+    height: auto;
 }
