--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,19 @@
 
 <body>
     <%- include('navbar')%>
+    <div class="row mt-3 border-bottom border-light justify-content-center">
+        <div class="col-lg-8 col-md-12 pb-3">
+            <form class="d-flex" role="search">
+                <img class="search-icon" src="/img/search.svg" alt="">
+                <input class="form-control me-2 search-bar" type="search" placeholder="Search" aria-label="Search">
+                <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
+            </form>
+        </div>
+        <div class="col-lg-2 col-md-12 pb-3">
+            <button class="btn btn-primary btn-block">Sort</button>
+        </div>
+    </div>
+    </div>
     <div class="row">
         <div class="col-lg-7 bg-primary">
             <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
@@ -27,13 +40,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/boy.png" class="d-block" alt="...">
+                        <img src="/img/boy.png" class="d-block" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/boy.png" class="d-block" alt="...">
+                        <img src="/img/boy.png" class="d-block" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/boy.png" class="d-block" alt="...">
+                        <img src="/img/boy.png" class="d-block" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -50,27 +63,12 @@
         </div>
         <div class="col-lg-5">
             <div class="row">
-                <img src="/boy.png" class="d-block w-50" alt="...">
+                <img src="/img/boy.png" class="d-block w-50" alt="...">
             </div>
             <div class="row">
-                <img src="/boy.png" class="d-block w-50" alt="...">
+                <img src="/img/boy.png" class="d-block w-50" alt="...">
             </div>
         </div>
-    </div>
-    <div class="row mt-3 border-bottom border-light">
-        <div class="col-lg-2 col-md-12 pb-3 d-flex justify-content-center">
-            <button class="btn btn-primary btn-block">Filter</button>
-        </div>
-        <div class="col-lg-8 col-md-12 pb-3">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
-            </form>
-        </div>
-        <div class="col-lg-2 col-md-12 pb-3">
-            <button class="btn btn-primary btn-block">Sort</button>
-        </div>
-    </div>
     </div>
     <div class="card-group">
         <div class="card">
