--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,86 +13,66 @@
 </head>
 
 <body>
-    <%- include('navbar')%>
-    <div class="row mt-3 border-bottom border-light justify-content-center">
-        <div class="col-lg-8 col-md-12 pb-3">
-            <form class="d-flex" role="search">
-                <img class="search-icon" src="/img/search.svg" alt="">
-                <input class="form-control me-2 search-bar" type="search" placeholder="Search" aria-label="Search">
-                <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
-            </form>
-        </div>
-        <div class="col-lg-2 col-md-12 pb-3">
-            <button class="btn btn-primary btn-block">Sort</button>
-        </div>
-    </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-7 bg-primary">
-            <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="/img/boy.png" class="d-block" alt="...">
+    <%- include('partials/navbar')%>
+        <div class="row">
+            <div class="col-lg-7 bg-primary">
+                <div id="carouselExampleAutoplaying" class="carousel slide " data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
                     </div>
-                    <div class="carousel-item">
-                        <img src="/img/boy.png" class="d-block" alt="...">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/img/boy.png" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/boy.png" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/boy.png" class="d-block" alt="...">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="/img/boy.png" class="d-block" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                    data-bs-slide="prev">
-                    <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                        <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span> -->
-                </button>
-                <button class="carousel-control-next" type="button"
-                    data-bs-target="#carouselExampleAutoplaying #carouselExampleCaptions" data-bs-slide="next">
-                    <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </button>
+                    <button class="carousel-control-next" type="button"
+                        data-bs-target="#carouselExampleAutoplaying #carouselExampleCaptions" data-bs-slide="next">
+                        <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span> -->
-                </button>
+                    </button>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="row">
+                    <img src="/img/watchtower.jpg" class="d-block carousel-sibling" alt="...">
+                </div>
+                <div class="row">
+                    <img src="/img/watchtower.jpg" class="d-block carousel-sibling" alt="...">
+                </div>
             </div>
         </div>
-        <div class="col-lg-5">
-            <div class="row">
-                <img src="/img/boy.png" class="d-block w-50" alt="...">
-            </div>
-            <div class="row">
-                <img src="/img/boy.png" class="d-block w-50" alt="...">
-            </div>
+        <div class="mt-3 gap-3 d-flex flex-wrap justify-content-center">
+            <% cards.forEach(card => { %>
+                <div class="card w-50">
+                    <img src="<%= card.src %>" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"><%= card.title %>
+                            <span><img class="like-svg" src="/img/like.svg" alt=""></span>
+                        </h5>
+
+                    </div>
+                </div>
+            <% }) %>
         </div>
-    </div>
-    <div class="card-group">
-        <div class="card">
-            <img src="/boy.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/boy.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/boy.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-            </div>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
