--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-lg-12 m-2">
+<div class="row header">
+    <div class="col-lg-12">
         <nav class="navbar navbar-expand-lg border-bottom border-light">
             <a class="navbar-brand ps-3" href="#">VisionVault</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg"
@@ -15,11 +15,10 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1">
                         <li class="nav-item pe-3">
-                            <form class="d-flex pb-1  search-bar-form" role="search">
+                            <form class="d-flex pb-1 search-bar-form" role="search">
                                 <img class="search-icon" src="/img/search.svg" alt="">
-                                <input class="form-control search-bar" type="search" placeholder="Search"
+                                <input class="form-control search-bar flex-grow-1" type="search" placeholder="Search"
                                     aria-label="Search">
-                                <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
                             </form>
                         </li>
                         <li class="nav-item nav-pages pe-4">
