--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,34 +18,100 @@
             <div class="col-lg-7 col-md-12">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <% carousel.forEach((item, index) => { %>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="<%= index %>"
+                        <% carousel.forEach((item, index)=> { %>
+                            <button type="button" data-bs-target="#carouselExampleCaptions"
+                                data-bs-slide-to="<%= index %>"
                                 class="<%= index === 0 ? 'active bg-dark' : 'bg-dark' %>"
                                 aria-current="<%= index === 0 ? 'true' : 'false' %>"
                                 aria-label="Slide <%= index + 1 %>"></button>
-                        <% }); %>
-                    </div>                    
+                            <% }); %>
+                    </div>
                     <div class="carousel-inner">
-                        <% carousel.forEach((item, index) => { %>
+                        <% carousel.forEach((item, index)=> { %>
                             <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
-                                <img src="<%= item.src %>" class="d-block" alt="...">
+                                <img src="<%= item.src %>" class="d-block img-fluid" alt="...">
                             </div>
-                        <% }); %>
-                    </div>                    
+                            <% }); %>
+                    </div>
                 </div>
             </div>
             <div class="col-lg-5 carousel-sib-div">
-                <% carousel_sib.forEach(item => { %>
+                <% carousel_sib.forEach(item=> { %>
                     <div class="row pb-3">
-                        <img src="<%= item.src %>" class="d-block carousel-sibling" alt="...">
+                        <img src="<%= item.src %>" class="d-block carousel-sibling img-fluid" alt="...">
                     </div>
-                <% }) %>
+                    <% }) %>
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-lg-12">
-                <h1 class="project-head">Projects <span class="project-count">(<%= cards.length %>)</span></h1>
-                <hr class="hr-project">
+        <div class="row mt-3 pb-3">
+            <div class="col-lg-10 col-md-">
+                <h1 class="project-head">Projects <span class="project-count">(<%= cards.length %>)</span>
+                </h1>
+            </div>
+            <div class="col-lg-2 d-flex">
+                <button type="button" class="btn btn-primary align-self-end" id="add-button" data-bs-toggle="modal"
+                    data-bs-target="#project-modal"><img class="me-1" src="/img/add.svg" alt="">Add Project</button>
+            </div>
+            <!-- <hr class="hr-project mt-2"> -->
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="projectModalLabel">Add Project</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="project-info">
+                            <div class="mb-3">
+                                <label for="project-title-field" class="form-label">Project Title</label>
+                                <input type="text" class="form-control" id="project-title-field" required>
+                              </div>
+                              <div class="mb-3">
+                                <label for="project-desc-field" class="form-label">Project Description</label>
+                                <textarea class="form-control" id="project-desc-field" rows="3"></textarea>
+                              </div>
+                        </div>
+                        <!--FIle Uploading-->
+                        <div class="file-upload d-flex align-content-center justify-content-center flex-column">
+                            <h1>Uplaod Your Attachment</h1>
+                            <div class="wrapper">
+                                <form action="#">
+                                    <img src="/img/cloud-upload.svg" alt="">
+                                    <p>Browse File to Upload</p>
+                                </form>
+                            </div>
+                            <section class="progress-area">
+                                <li class="row d-flex align-items-center justify-content-between">
+                                    <!-- <img src="/img/file.svg" alt="File.svg"> -->
+                                    <div class="content">
+                                        <div class="details">
+                                            <span class="name">image.png . Uploading</span>
+                                            <span class="percent">50%</span>
+                                        </div>
+                                    </div>
+                                </li>
+                            </section>
+                            <section class="upload-area">
+                                <li class="row d-flex align-items-center justify-content-between">
+                                    <div class="content">
+                                        <!-- <img src="/img/file.svg" alt="File.svg"> -->
+                                        <div class="details">
+                                            <span class="name">image.png . Uploaded</span>
+                                            <span class="size">70 Kb</span>
+                                        </div>
+                                    </div>
+                                    <img src="" alt="check.svg">
+                                </li>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row m-2 d-flex">
@@ -62,16 +128,18 @@
                             </p>
                         </div>
                         <div class="card-stats">
-                            <span class="like-span"><img class="like-svg" src="/img/like.svg" alt=""> <%= formatLikes(card.likes) %></span>
+                            <span class="like-span"><img class="like-svg" src="/img/like.svg" alt="">
+                                <%= formatLikes(card.likes) %>
+                            </span>
                         </div>
                     </div>
                 </div>
                 <% }) %>
         </div>
         <%- include('partials/footer')%>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
