--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
             <div class="col-lg-7 col-md-12">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <% carousel.forEach((item, index)=> { %>
+                        <% carousel.images.forEach((item, index)=> { %>
                             <button type="button" data-bs-target="#carouselExampleCaptions"
                                 data-bs-slide-to="<%= index %>"
                                 class="<%= index === 0 ? 'active bg-dark' : 'bg-dark' %>"
@@ -27,9 +27,9 @@
                             <% }); %>
                     </div>
                     <div class="carousel-inner">
-                        <% carousel.forEach((item, index)=> { %>
+                        <% carousel.images.forEach((item, index)=> { %>
                             <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
-                                <img src="<%= item.src %>" class="d-block img-fluid" alt="...">
+                                <img src="<%= item %>" class="d-block img-fluid object-fit-fill" alt="...">
                             </div>
                             <% }); %>
                     </div>
@@ -38,23 +38,23 @@
             <div class="col-lg-5 carousel-sib-div">
                 <% carousel_sib.forEach(item=> { %>
                     <div class="row pb-3">
-                        <img src="<%= item.src %>" class="d-block carousel-sibling img-fluid" alt="...">
+                        <img src="<%= item.images[0] %>" class="d-block carousel-sibling img-fluid" alt="...">
                     </div>
                     <% }) %>
             </div>
         </div>
         <div class="row mt-3 pb-3">
-            <div class="col-lg-10 col-md-">
+            <div class="col-lg-10 col-md-8 col-sm-8">
                 <h1 class="project-head">Projects <span class="project-count">(<%= cards.length %>)</span>
                 </h1>
             </div>
-            <div class="col-lg-2 d-flex">
+            <div class="col-lg-2 col-md-4 col-sm-4 d-flex">
                 <button type="button" class="btn btn-primary align-self-end" id="add-button" data-bs-toggle="modal"
                     data-bs-target="#project-modal"><img class="me-1" src="/img/add.svg" alt="">Add Project</button>
             </div>
             <!-- <hr class="hr-project mt-2"> -->
         </div>
-        <!-- Modal -->
+        <!--Project Add Modal -->
         <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
                 <div class="modal-content">
@@ -67,62 +67,64 @@
                             <div class="mb-3">
                                 <label for="project-title-field" class="form-label">Project Title</label>
                                 <input type="text" class="form-control" id="project-title-field" required>
-                              </div>
-                              <div class="mb-3">
+                            </div>
+                            <div class="mb-3">
                                 <label for="project-desc-field" class="form-label">Project Description</label>
                                 <textarea class="form-control" id="project-desc-field" rows="3"></textarea>
-                              </div>
+                            </div>
                         </div>
                         <!--FIle Uploading-->
                         <div class="file-upload d-flex align-content-center justify-content-center flex-column">
-                            <h1>Uplaod Your Attachment</h1>
+                            <h1>Uplaod Your Attachment<sub style="font-size: medium; color: gray">(.png,.jpg
+                                    supported)</sub></h1>
                             <div class="wrapper">
-                                <form action="/upload" method="post" enctype="multipart/form-data">
-                                    <input type="file" name="projectImage" id="" class="file-input">
-                                    <button type="submit">Upload</button>
+                                <form action="/" enctype="multipart/form-data" class="img-form">
+                                    <input type="file" name="projectImages" id="project-images" class="file-input"
+                                        multiple required hidden>
+                                    <!-- <button type="submit">Upload</button> -->
                                     <img src="/img/cloud-upload.svg" alt="">
                                     <p>Browse File to Upload</p>
                                 </form>
                             </div>
-                            <section class="progress-area">
-                                <li class="row d-flex align-items-center justify-content-between">
-                                    <div class="content">
-                                        <img class="fa-file" src="/img/file.svg" alt="File.svg">
-                                        <div class="details">
-                                            <span class="name">image.png . Uploading</span>
-                                            <span class="percent">50%</span>
-                                        </div>
-                                        <div class="progress-bar">
-                                            <div class="progress"></div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </section>
-                            <section class="upload-area">
-                                <li class="row d-flex align-items-center justify-content-between">
-                                    <div class="content">
-                                        <img class="fa-file" src="/img/file.svg" alt="File.svg">
-                                        <div class="details">
-                                            <span class="name">image.png . Uploaded</span>
-                                            <span class="size">70 Kb</span>
-                                            <img class="fa-check" src="" alt="check.svg">
-                                        </div>
-                                    </div>
-                                </li>
-                            </section>
+                            <section class="upload-area"></section>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" onclick=uploadProject() class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- Project Desc Modal -->
+        <div class="modal fade" id="cardModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="cardModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="cardModalLabel">Modal title</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="modalCardDesc"></p>
+                        <div id="modalCardImages" class="mb-3">
+                            <!-- Images will be dynamically added here -->
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="row m-2 d-flex">
             <% cards.forEach(card=> { %>
-                <div class="card col-lg-4 col-md-6">
-                    <img src="<%= card.src %>" class="card-img-top card-img" alt="...">
+                <div class="card col-lg-4 col-md-6" data-bs-toggle="modal" data-bs-target="#cardModal"
+                    data-title="<%= card.title %>" data-desc="<%= card.desc %>"
+                    data-images="<%= card.images.join(',') %>">
+                    <img src="<%= card.images[0] %>" class="card-img-top card-img" alt="...">
                     <div class="card-body">
                         <div class="card-info">
                             <h5 class="card-title">
@@ -133,18 +135,22 @@
                             </p>
                         </div>
                         <div class="card-stats">
-                            <span class="like-span"><img class="like-svg" src="/img/like.svg" alt="">
+                            <span class="like-span">
+                                <img class="like-svg" src="/img/like.svg" alt="">
                                 <%= formatLikes(card.likes) %>
                             </span>
                         </div>
+                        <button type="button" class="btn btn-primary">Save</button>
                     </div>
                 </div>
                 <% }) %>
         </div>
+
         <%- include('partials/footer')%>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
+            <script src="/script.js"></script>
 </body>
 
 </html>
