--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -42,8 +42,8 @@
                             </ul>
                         </li>
                         <li class="nav-item pe-4 d-flex log-sign-li">
-                            <button class="login" role="button">Login</button>
-                            <button class="signup" role="button">Sign Up</button>
+                        <button class="login" id="loginButton" role="button">Login</button>
+                            <button class="signup"  id="SignUpButton" role="button">Sign Up</button>
                         </li>
                     </ul>
                 </div>
