Search Functionality added

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,11 +15,10 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1">
                         <li class="nav-item pe-3">
-                            <form class="d-flex pb-1 search-bar-form" role="search">
+                            <form id="searchForm" class="d-flex pb-1 search-bar-form" role="search">
                                 <img class="search-icon" src="/img/search.svg" alt="">
-                                <input class="form-control search-bar flex-grow-1" type="search" placeholder="Search"
-                                    aria-label="Search">
-                            </form>
+                                <input class="form-control search-bar flex-grow-1" type="search" name="query" id="searchInput" placeholder="Search" aria-label="Search">
+                            </form>                          
                         </li>
                         <li class="nav-item nav-pages pe-4">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
