--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
@@ -48,10 +48,12 @@
                 <h1 class="project-head">Projects <span class="project-count">(<%= cards.length %>)</span>
                 </h1>
             </div>
+            <% if (isLoggedIn) { %>
             <div class="col-lg-2 col-md-4 col-sm-4 d-flex">
                 <button type="button" class="btn btn-primary align-self-end" id="add-button" data-bs-toggle="modal"
                     data-bs-target="#project-modal"><img class="me-1" src="/img/add.svg" alt="">Add Project</button>
             </div>
+            <% }%>
             <!-- <hr class="hr-project mt-2"> -->
         </div>
         <!--Project Add Modal -->
@@ -120,13 +122,13 @@
         </div>
         <div id="searchResults" class="row m-2 d-flex">
             <!-- Initial project cards will be rendered here -->
-            <%- include('partials/project-list', { projects: cards }) %>
+            <%- include('partials/project-list', { projects: cards, isLoggedIn: isLoggedIn, ismy: true }) %>
         </div>
         <%- include('partials/footer')%>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous"></script>
-            <script src="/script.js"></script>
+            <script src="/js/script.js"></script>
 </body>
 
 </html>
