--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -54,6 +54,18 @@
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/signin.js"></script>
+
+  <!-- JavaScript to close the email page if specified -->
+  <script>
+    // Check if the URL contains a query parameter indicating to close the email page
+    const urlParams = new URLSearchParams(window.location.search);
+    const closed = urlParams.get('closed');
+
+    // If the 'closed' parameter is 'true', close the previous email page
+    if (closed === 'true' && window.opener) {
+        window.opener.close();
+    }
+</script>
 </body>
 </html>
 
