--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forget Password Page</title>
+    <title>Change Password Page</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Poppins Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-     <link rel="stylesheet" href="/css/forgetpassword.css">
+     <link rel="stylesheet" href="/css/changepassword.css">
 </head>
 <body>
 
 <div class="container form-container">
     <div class="row justify-content-center">
         <div class="col-md-12">
-            <h2 class="text-center mb-4">Password Reset</h2>
-            <form onsubmit="forgetpassword(event)" method="POST">
+            <h2 class="text-center mb-4">Change Password</h2>
+            <form onsubmit="changepassword(event)" method="POST">
                 <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username">
+                    <label for="password" class="form-label">Enter Previous Password</label>
+                    <input type="password" class="form-control" id="opassword">
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email">
+                    <label for="password" class="form-label">Enter New Password</label>
+                    <input type="password" class="form-control" id="npassword">
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Reset</button>
+                <button type="submit" class="btn btn-primary w-100">Change Password</button>
                 
             </form>
         </div>
@@ -36,7 +36,7 @@
 
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/forgetpassword.js"></script>
+<script src="/js/changepassword.js"></script>
 
 
 </body>
