--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -24,7 +24,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item nav-pages pe-4">
-                            <a class="nav-link" aria-current="page" href="#">About</a>
+                            <a class="nav-link" aria-current="page" href="/about">About</a>
                         </li>
                         <% if (isLoggedIn) { %>
                         <li class="nav-item nav-pages dropdown pe-4">
@@ -42,8 +42,8 @@
                                     <img class="profile-img" src="/img/profile.svg" alt="profile">
                                 </a>
                                 <ul class="dropdown-menu ">
-                                    <li><a class="dropdown-item" href="#"><img src="/img/lock.svg" alt="lock.svg">Change Password</a></li>
-                                    <li><a class="dropdown-item" href="#"><img src="/img/logout.svg" alt="logout.svg" class="inline-text">Logout</a></li>
+                                    <li><a class="dropdown-item" href="/changepassword"><img src="/img/lock.svg" alt="lock.svg">Change Password</a></li>
+                                    <li><a class="dropdown-item" href="/logout"><img src="/img/logout.svg" alt="logout.svg" class="inline-text">Logout</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
