--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -29,7 +29,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Sign In</button>
                 <div class="forgot-password">
-                    <a href="#">Forgot Password?</a>
+                    <a href="/forgetpassword">Forgot Password?</a>
                 </div>
             </form>
             <p class="social-text">Or sign in with social platforms</p>
